Fixed z-index for mobile menu. Default copy2clipboard not visible.

--- a/themes/hugo-theme-codex/assets/css/clipboard.css
+++ b/themes/hugo-theme-codex/assets/css/clipboard.css
@@ -8,8 +8,8 @@
     border: 1px solid #ededed;
     border-radius: 4px;
     font-size: 0.8em;
-    z-index: 1;
-    opacity: 1;
+    z-index: 0;
+    opacity: 0;
     transition: 0.1s;
   }
   .clipboard-button > svg {
